backend/k8s/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: collapp-dev-namespace

spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

  type: ClusterIP
