backend/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: collapp-service
  namespace: collapp-dev-namespace

spec:
  selector:
    app: collapp
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP

  type: ClusterIP
