backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: collapp-ingress
  namespace: collapp-dev-namespace

spec:
  ingressClassName: nginx
  rules:
    - host: spring.local
      http:
        paths:
          - backend:
              service:
                name: collapp-service
                port:
                  number: 8081
            pathType: Prefix
            path: /
